```text Refactor game code to improve performance and readability ```<|diff_marker|> --- git-commit-message/git-commit-message.py <|diff_marker|> 1000 +import re <|diff_marker|> --- git-commit-message/git-commit-message.py <|diff_marker|> 1022 + <|diff_marker|> --- git-commit-message/git-commit-message.py <|diff_marker|> 1023 +commit_message = "Refactor game code to improve performance and readability" <|diff_marker|> --- git-commit-message/git-commit-message.py <|diff_marker|> 1024 +print(f"```text\n{commit_message}\n```")

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Launch Brave",
+            "request": "launch",
+            "type": "chrome",
+            "file": "${workspaceFolder}/game/index.html",
+            "webRoot": "${workspaceFolder}",
+            "runtimeExecutable": "/Applications/Brave Browser.app/Contents/MacOS/Brave Browser"
+        },
+        {
             "type": "msedge",
             "request": "launch",
             "name": "Launch Edge against localhost",
@@ -15,8 +23,9 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "file": "${workspaceFolder}/game/index.html",
-            "webRoot": "${workspaceFolder}"
+            "url": "http://localhost:8080",
+            "webRoot": "${workspaceFolder}",
+            "runtimeExecutable": "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
         }
     ]
 }
